# rocHPL

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  install-with-scorep.sh  install.sh  run-scorep.sh  scorep-install-helper.sh
.github/: CODEOWNERS
cmake/: Dependencies.cmake
include/: hpl.hpp  hpl_auxil.hpp  hpl_blas.hpp  hpl_comm.hpp  hpl_grid.hpp  hpl_hip_ex.hpp  hpl_misc.hpp  hpl_panel.hpp  hpl_pauxil.hpp  hpl_pfact.hpp  hpl_pgesv.hpp  hpl_pmatgen.hpp  hpl_pmisc.hpp  hpl_ptest.hpp  hpl_ptimer.hpp  hpl_version.hpp.in
scripts/: mpirun_rochpl.in  run_rochpl.in
src/: HPL_InitGPU.cpp  HPL_pddriver.cpp  HPL_pdinfo.cpp  HPL_pdtest.cpp  HPL_pdwarmup.cpp
src/auxil/: HPL_abort.cpp  HPL_dlacpy.cpp  HPL_dlacpy_device.cpp  HPL_dlamch.cpp  HPL_dlange.cpp  HPL_dlaprnt.cpp  HPL_dlatcpy.cpp  HPL_dlatcpy_device.cpp  HPL_fprintf.cpp  HPL_warn.cpp
src/blas/: HPL_daxpy.cpp  HPL_dgemm.cpp  HPL_dgemv.cpp  HPL_dger.cpp  HPL_dscal.cpp  HPL_idamax.cpp
src/comm/: HPL_all_reduce.cpp  HPL_all_reduce_dmxswp.cpp  HPL_allgatherv.cpp  HPL_barrier.cpp  HPL_bcast.cpp  HPL_bcast_1rinM.cpp  HPL_bcast_1ring.cpp  HPL_bcast_2rinM.cpp  HPL_bcast_2ring.cpp  HPL_bcast_blonM.cpp  HPL_bcast_blong.cpp  HPL_broadcast.cpp  HPL_recv.cpp  HPL_reduce.cpp  HPL_scatterv.cpp  HPL_sdrv.cpp  HPL_send.cpp
src/grid/: HPL_grid_exit.cpp  HPL_grid_info.cpp  HPL_grid_init.cpp
src/matgen/: HPL_pdmatgen.cpp  HPL_pdrandmat_device.cpp  HPL_xjumpm.cpp
src/panel/: HPL_pdpanel_SendToDevice.cpp  HPL_pdpanel_SendToHost.cpp  HPL_pdpanel_bcast.cpp  HPL_pdpanel_copyL1.cpp  HPL_pdpanel_disp.cpp  HPL_pdpanel_free.cpp  HPL_pdpanel_init.cpp  HPL_pdpanel_new.cpp  HPL_pdpanel_swapids.cpp  HPL_pdpanel_wait.cpp
src/pauxil/: HPL_dlaswp00N_device.cpp  HPL_dlaswp01T_device.cpp  HPL_dlaswp02T_device.cpp  HPL_dlaswp03T_device.cpp  HPL_dlaswp04T_device.cpp  HPL_dlaswp10N_device.cpp  HPL_indxg2l.cpp  HPL_indxg2lp.cpp  HPL_indxg2p.cpp  HPL_indxl2g.cpp  HPL_infog2l.cpp  HPL_numroc.cpp  HPL_numrocI.cpp  HPL_pabort.cpp  HPL_pdlamch.cpp  HPL_pdlange_device.cpp  HPL_pwarn.cpp
src/pfact/: HPL_dlocmax.cpp  HPL_dlocswpN.cpp  HPL_dlocswpT.cpp  HPL_pdfact.cpp  HPL_pdfact_device.cpp  HPL_pdmxswp.cpp  HPL_pdpancrN.cpp  HPL_pdpancrN_device.cpp  HPL_pdpancrT.cpp  HPL_pdpancrT_device.cpp  HPL_pdpanllN.cpp  HPL_pdpanllN_device.cpp  HPL_pdpanllT.cpp  HPL_pdpanllT_device.cpp  HPL_pdpanrlN.cpp  HPL_pdpanrlN_device.cpp  HPL_pdpanrlT.cpp  HPL_pdpanrlT_device.cpp  HPL_pdrpancrN.cpp  HPL_pdrpancrT.cpp  HPL_pdrpanllN.cpp  HPL_pdrpanllT.cpp  HPL_pdrpanrlN.cpp  HPL_pdrpanrlT.cpp
src/pgesv/: HPL_pdgesv.cpp  HPL_pdlaswp.cpp  HPL_pdtrsv_device.cpp  HPL_pdupdateNT.cpp  HPL_pdupdateTT.cpp  HPL_perm.cpp  HPL_pipid.cpp  HPL_piplen.cpp  HPL_plindx.cpp
src/timer/: HPL_ptimer.cpp  HPL_ptimer_cputime.cpp  HPL_ptimer_walltime.cpp
